fixed checkbox alignment

--- a/client/web/src/main/webapp/skins/default/less/action-buttons.less
+++ b/client/web/src/main/webapp/skins/default/less/action-buttons.less
@@ -162,6 +162,7 @@ label.checkbox-icon-label {
         content: '';
         background-repeat: no-repeat;
         margin-right: 0.2em;
+        margin-bottom: -0.2em;
     }
 }
 input.checkbox {
